[tool.poetry]
name = "valutatrade-hub"  # Имя должно совпадать с основной папкой
version = "0.1.0"

# Эта строка ОБЯЗАТЕЛЬНА для указания пакетов:
packages = [{include = "valutatrade_hub"}]

[tool.poetry.dependencies]
python = "^3.14.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.0"

# Выберите ОДИН из вариантов:
[tool.poetry.scripts]
# Вариант 1: для запуска старого CLI через argparse
project = "valutatrade_hub.cli.interface:interface"

# ИЛИ Вариант 2: для запуска нового интерактивного CLI из main.py
# project = "main:main"